# ERC3643-Cairo

./: ERC3643_Associaton_Project_Application.md  README.md  specs.md
erc3643/: .gitignore  ARCHITECTURE.md  LICENSE  README.md  Scarb.toml  snforge.toml
erc3643/scripts/: deploy.sh
erc3643/solana-erc3643/: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  client.example.js
erc3643/solana-erc3643/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs  tests.rs
erc3643/src/: README.md  claim_topics_registry.cairo  compliance.cairo  identity_registry.cairo  identity_storage.cairo  lib.cairo  token.cairo  trusted_issuers_registry.cairo
erc3643/src/components/: erc3643.cairo  identity_registry.cairo
erc3643/src/examples/: erc3643_interface_example.cairo  erc3643_token.cairo
erc3643/src/interfaces/: iclaim_topics_registry.cairo  icompliance.cairo  ierc3643.cairo  iidentity_registry.cairo  iidentity_storage.cairo  itrusted_issuers_registry.cairo
erc3643/tests/: test_compliance.cairo.bak  test_comprehensive.cairo  test_fixes.cairo  test_future.cairo  test_token.cairo.bak
